--- a/conocenos.html
+++ b/conocenos.html
@@ -20,7 +20,7 @@
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-        <title>Sistemas</title>
+        <title>MachiFix</title>
     </head>
     <body>
         <header>
@@ -30,7 +30,7 @@
                     <a class="navbar-brand" href='index.html'>
                         <img src="img/LogoTI.png" alt="Logo" width="50px">
                     </a>
-                    <h1 class="col nav-item text-white">Uchimachima</h1>
+                    <h1 class="col nav-item text-white">MachiFix</h1>
                     <!--LINKS-->
                     <ul class="row nav navbar-nav justify-content-end">
                         <li class="col nav-item">
@@ -58,7 +58,7 @@
                 <div class="col-md-5">
                     <h3 class="pt-4">Nuestra historia</h3>
                     <p>
-                        Desde una idea sin equipo, Uchimachima se ha desenvuelto hasta
+                        Desde una idea sin equipo, MachiFix se ha desenvuelto hasta
                         alcanzar un estándar de servicio impecable, imparable e imperativo.
                     </p>
                     <p>
