--- a/servicios.html
+++ b/servicios.html
@@ -164,7 +164,7 @@
                             </p>
                         </div>
                         <div class="row">
-                            <a class="text-white" href="/privacidad.html">
+                            <a class="text-white" href="privacidad.html">
                                 Aviso de privacidad
                             </a>
                         </div>
