--- a/conocenos.html
+++ b/conocenos.html
@@ -67,7 +67,7 @@
                 </div>
             </nav>
         </header>
-        <hr class="py-0" style="height:10px; opacity: 1; color: #0D6EFD; background-color: #0D6EFD">
+        <hr class="py-0" style="height:10px; opacity: 1; color: #0D6EFD; background-color:#0D6EFD">
         <main class="px-5 pb-5 container-fluid">
             <div class="row">
                 <div class="col-md-5">
@@ -116,7 +116,7 @@
                             </p>
                         </div>
                         <div class="row">
-                            <a class="text-white" href="/privacidad.html">
+                            <a class="text-white" href="privacidad.html">
                                 Aviso de privacidad
                             </a>
                         </div>
