--- a/privacidad.html
+++ b/privacidad.html
@@ -114,7 +114,7 @@
                             </p>
                         </div>
                         <div class="row">
-                            <a class="text-white" href="/privacidad.html">
+                            <a class="text-white" href="privacidad.html">
                                 Aviso de privacidad
                             </a>
                         </div>
